feat(bridge): support isolated discovery files